# omni-trader-hub

./: .env.example  .firebaserc  .gitignore  BACKLOG.md  CHANGELOG.md  Dockerfile  LICENSE  MATRIX_ROUTES.md  Makefile  Makefile.gh  Makefile.jules  PRD.md  PROMPT.md  README.md  ROADMAP.md  TASKS.md  TODO.md  components.json  compose.dev.yml  compose.yml  index.html  package-lock.json  package.json  reply.py  requirements.txt  review.txt  tailwind.config.ts  task_t76.txt  task_t77.txt  threads.json
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/config/: config.yaml
backend/data/: trades.db  trades.db-shm  trades.db-wal  trades_backup_20260226_004627.db
backend/scripts/: verify_smc.py
backend/src/: bot_manager.py  config.py  database.py  exchange.py  indicators.py  main.py  notifier.py  rate_limiter.py  risk.py  watchdog.py  ws_feed.py
backend/tests/: conftest.py  test_api_auth.py  test_api_bots.py  test_api_config.py  test_api_env.py  test_api_markets.py  test_api_system.py  test_backtest.py  test_celery_tasks.py  test_config_reload.py  test_crisis_integration.py  test_custom_strategy.py  test_custom_strategy_executor.py  test_database.py  test_database_backup.py  test_double_confirmation.py  test_exchanges.py  test_execution.py  test_graph_analytics.py  test_indicators.py  test_ingestor.py  test_liquidation.py  test_main_ws_staleness.py  test_nlp.py  test_order_double_confirmation.py  test_persistence.py  test_rate_limiter.py  test_reconciliation.py  (+13 more)
(+649 files in other folders)
